--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hamster-kombat-telegram-mini-app-clone",
+  "name": "w-coin-clone-script",
   "private": true,
   "version": "0.0.0",
   "type": "module",
